# pymarian-webapp

./: .gitignore  MANIFEST.in  README.md  examples  pyproject.toml  requirements.txt
pymarian_webapp/: __init__.py  app.py  constants.py  evaluator_service.py  mtapi_client.py  translator_service.py
pymarian_webapp/examples/: basic.yml  example.yml
pymarian_webapp/static/css/: custom.css
pymarian_webapp/static/js/: webspeech.js
pymarian_webapp/templates/: about.html  base.html  home.html  index.html  livemt.html
